--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ langchain-core==0.3.29
 langchain-openai==0.2.14
 langchain-text-splitters==0.3.4
 langchain-unstructured==0.1.5
+langchain-chroma==0.1.0
 langsmith==0.2.10
 marshmallow==3.23.3
 multidict==6.1.0
