--- a/requirements.txt
+++ b/requirements.txt
@@ -21,12 +21,12 @@ jiter==0.8.2
 jsonpatch==1.33
 jsonpath-python==1.0.6
 jsonpointer==3.0.0
-langchain==0.3.14
-langchain-community==0.3.14
-langchain-openai==0.2.14
-langchain-text-splitters==0.3.4
-langchain-unstructured==0.1.5
-langchain-chroma==0.1.0
+langchain==0.3.12  # Adjusted to match langchain-core requirements
+langchain-community==0.3.12  # Aligned with langchain
+langchain-openai==0.2.12  # Aligned with langchain
+langchain-text-splitters==0.3.2  # Aligned with langchain
+langchain-unstructured==0.1.3  # Aligned with langchain
+langchain-chroma==0.1.0  # Requires langchain-core<0.2.0
 langsmith==0.2.10
 marshmallow==3.23.3
 multidict==6.1.0
